--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ set(CLASSIFIER_SOURCES ${PROJECT_SOURCE_DIR}
 
 set(INSTANCE_SEGMENTATION_SOURCES ${PROJECT_SOURCE_DIR}
    src/tasks/instance_segmentation/src/YOLOSeg.cpp
+   src/tasks/instance_segmentation/src/RFDetrSeg.cpp
   )
 
 set(OPTICAL_FLOW_SOURCES ${PROJECT_SOURCE_DIR}
