Add concurrency control to prevent duplicate workflow runs
- Add concurrency group to CI and Security workflows
- Cancel in-progress runs when new commits are pushed
- Limit PR triggers to opened, synchronize, and reopened events

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,11 @@ on:
     branches: [ master, main, develop ]
   pull_request:
     branches: [ master, main, develop ]
+    types: [ opened, synchronize, reopened ]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build-and-test:
