Add path filters to workflows to prevent unnecessary runs
- Skip CI workflow for documentation-only changes
- Skip Security workflow for documentation-only changes
- Skip workflows when only other workflow files change
- Reduce redundant workflow executions

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -3,8 +3,17 @@ name: Security Scan
 on:
   push:
     branches: [ master, main ]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.github/workflows/ci.yml'
+      - '.github/workflows/docker-publish.yml'
+      - '.github/workflows/pre-commit.yml'
   pull_request:
     branches: [ master, main ]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
   schedule:
     # Run weekly on Mondays at 00:00 UTC
     - cron: '0 0 * * 1'
