Fix test execution - run test binary directly
- CTest not finding tests properly in CI environment
- Run test executable directly as fallback
- Add debug output to locate test binary
- Generate XML test results for better reporting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,17 @@ jobs:
         TritonClientBuild_DIR: ${{ github.workspace }}/triton_client_libs/install
       run: |
         cd build
-        ctest --output-on-failure --verbose
+        # List test executables
+        ls -la tests/ || true
+        ls -la run_tests || true
+        # Run tests directly if CTest doesn't find them
+        if [ -f "tests/run_tests" ]; then
+          ./tests/run_tests --gtest_output=xml:test-results.xml
+        elif [ -f "run_tests" ]; then
+          ./run_tests --gtest_output=xml:test-results.xml
+        else
+          ctest --output-on-failure --verbose
+        fi
 
   codeql:
     name: CodeQL Security Analysis
