Refactor: Remove YOLOv10, YoloNas, RAFT, and TimeSformer implementations
- Deleted YOLOv10.hpp and YOLOv10.cpp files to remove YOLOv10 task implementation.
- Removed YoloNas.hpp and YoloNas.cpp files, eliminating the YoloNas task.
- Deleted RAFT.hpp and RAFT.cpp files, which contained the RAFT optical flow task.
- Removed TimeSformer.hpp and TimeSformer.cpp files, discontinuing the TimeSformer video classification task.
- Updated task_factory.cpp and task_factory.hpp to remove references to the deleted tasks.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,9 @@
   "entrypoint": ["/bin/bash"],
   "workspaceMount": "source=${localWorkspaceFolder},target=/app,type=bind",
   "workspaceFolder": "/app",
+  "containerEnv": {
+    "TritonClientBuild_DIR": "/workspace/install"
+  },
   "customizations": {
     "vscode": {
       "extensions": [
