feat: add RFDetr reproduction test and update CMake configuration

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set(TEST_SOURCES
     test_triton.cpp
     test_classification_preprocess.cpp
     test_app.cpp
+    test_rfdetr_repro.cpp
 )
 
 # Source files that need to be tested (without main)
