Add YOLO export and environment setup scripts
- Created `export.sh` for exporting YOLO models to ONNX and TensorRT formats with support for various versions and options.
- Implemented logging and help functions for user guidance.
- Added `setup_env.sh` to create optimized virtual environments for YOLO exports, supporting both conda and venv.
- Included version-specific dependency installations for YOLO models.
- Enhanced user experience with detailed logging and activation instructions.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -117,7 +117,23 @@
             ],
             "environment": [{ "name": "config", "value": "Debug" }],
             "cwd": "${workspaceFolder}" 
-        },          
+        },  
+        {
+            "name": "yolov8x_onnx",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/tritonic",
+            "args": ["--source=data/images/dog.jpg", 
+            "--serverAddress=localhost",
+            "--labelsFile=labels/coco.txt",
+            "--model=yolov8x_onnx",
+            "--model_type=yolov8",
+            "--input_sizes=\"3,640,640\""//,
+            //
+            ],
+            "environment": [{ "name": "config", "value": "Debug" }],
+            "cwd": "${workspaceFolder}" 
+        },                 
         {
             "name": "resnet50_tensorflow",
             "type": "cppdbg",
