feat: add YOLOv7 End-to-End configuration and update README with export notes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -88,7 +88,22 @@
                 ],
             "environment": [{ "name": "config", "value": "Debug" }],
             "cwd": "${workspaceFolder}" 
-        },                
+        },   
+        {
+            "name": "yolov7_e2e_trt",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/tritonic",
+            "args": ["--source=data/images/bus.jpg", 
+            "--serverAddress=localhost",
+            "--labelsFile=labels/coco.txt",
+            "--model=yolov7_e2e_trt",
+            "--model_type=yolov7e2e",
+            "--input_sizes=\"3,640,640\""
+                ],
+            "environment": [{ "name": "config", "value": "Debug" }],
+            "cwd": "${workspaceFolder}" 
+        },                      
         {
             "name": "yolov8m_onnx",
             "type": "cppdbg",
